docs/api/qiskit/0.24/qiskit.circuit.library.MCXGate.mdx
---
title: MCXGate
description: API reference for qiskit.circuit.library.MCXGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.MCXGate
---

<span id="qiskit-circuit-library-mcxgate" />

# qiskit.circuit.library.MCXGate

<Class id="qiskit.circuit.library.MCXGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/circuit/library/standard_gates/x.py" signature="MCXGate(num_ctrl_qubits=None, label=None, ctrl_state=None)">
  The general, multi-controlled X gate.

  Create new MCX gate.

  ### \_\_init\_\_

  <Function id="qiskit.circuit.library.MCXGate.__init__" name="__init__" signature="__init__(num_ctrl_qubits, label=None, ctrl_state=None, _name='mcx')">
    Create new MCX gate.
  </Function>

  ## Methods

  |                                                                                                                                                                        |                                                                            |
  | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.circuit.library.MCXGate.__init__ "qiskit.circuit.library.MCXGate.__init__")(num\_ctrl\_qubits\[, label, …])                                       | Create new MCX gate.                                                       |
  | [`add_decomposition`](#qiskit.circuit.library.MCXGate.add_decomposition "qiskit.circuit.library.MCXGate.add_decomposition")(decomposition)                             | Add a decomposition of the instruction to the SessionEquivalenceLibrary.   |
  | [`assemble`](#qiskit.circuit.library.MCXGate.assemble "qiskit.circuit.library.MCXGate.assemble")()                                                                     | Assemble a QasmQobjInstruction                                             |
  | [`broadcast_arguments`](#qiskit.circuit.library.MCXGate.broadcast_arguments "qiskit.circuit.library.MCXGate.broadcast_arguments")(qargs, cargs)                        | Validation and handling of the arguments and its relationship.             |
  | [`c_if`](#qiskit.circuit.library.MCXGate.c_if "qiskit.circuit.library.MCXGate.c_if")(classical, val)                                                                   | Add classical condition on register classical and value val.               |
  | [`control`](#qiskit.circuit.library.MCXGate.control "qiskit.circuit.library.MCXGate.control")(\[num\_ctrl\_qubits, label, ctrl\_state])                                | Return a multi-controlled-X gate with more control lines.                  |
  | [`copy`](#qiskit.circuit.library.MCXGate.copy "qiskit.circuit.library.MCXGate.copy")(\[name])                                                                          | Copy of the instruction.                                                   |
  | [`get_num_ancilla_qubits`](#qiskit.circuit.library.MCXGate.get_num_ancilla_qubits "qiskit.circuit.library.MCXGate.get_num_ancilla_qubits")(num\_ctrl\_qubits\[, mode]) | Get the number of required ancilla qubits without instantiating the class. |
  | [`inverse`](#qiskit.circuit.library.MCXGate.inverse "qiskit.circuit.library.MCXGate.inverse")()                                                                        | Invert this gate.                                                          |
  | [`is_parameterized`](#qiskit.circuit.library.MCXGate.is_parameterized "qiskit.circuit.library.MCXGate.is_parameterized")()                                             | Return True .IFF.                                                          |
  | [`mirror`](#qiskit.circuit.library.MCXGate.mirror "qiskit.circuit.library.MCXGate.mirror")()                                                                           | DEPRECATED: use instruction.reverse\_ops().                                |
  | [`power`](#qiskit.circuit.library.MCXGate.power "qiskit.circuit.library.MCXGate.power")(exponent)                                                                      | Creates a unitary gate as gate^exponent.                                   |
  | [`qasm`](#qiskit.circuit.library.MCXGate.qasm "qiskit.circuit.library.MCXGate.qasm")()                                                                                 | Return a default OpenQASM string for the instruction.                      |
  | [`repeat`](#qiskit.circuit.library.MCXGate.repeat "qiskit.circuit.library.MCXGate.repeat")(n)                                                                          | Creates an instruction with gate repeated n amount of times.               |
  | [`reverse_ops`](#qiskit.circuit.library.MCXGate.reverse_ops "qiskit.circuit.library.MCXGate.reverse_ops")()                                                            | For a composite instruction, reverse the order of sub-instructions.        |
  | [`to_matrix`](#qiskit.circuit.library.MCXGate.to_matrix "qiskit.circuit.library.MCXGate.to_matrix")()                                                                  | Return a Numpy.array for the gate unitary matrix.                          |
  | [`validate_parameter`](#qiskit.circuit.library.MCXGate.validate_parameter "qiskit.circuit.library.MCXGate.validate_parameter")(parameter)                              | Gate parameters should be int, float, or ParameterExpression               |

  ## Attributes

  |                                                                                                                                |                                                                               |
  | ------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------- |
  | [`ctrl_state`](#qiskit.circuit.library.MCXGate.ctrl_state "qiskit.circuit.library.MCXGate.ctrl_state")                         | Return the control state of the gate as a decimal integer.                    |
  | [`decompositions`](#qiskit.circuit.library.MCXGate.decompositions "qiskit.circuit.library.MCXGate.decompositions")             | Get the decompositions of the instruction from the SessionEquivalenceLibrary. |
  | [`definition`](#qiskit.circuit.library.MCXGate.definition "qiskit.circuit.library.MCXGate.definition")                         | Return definition in terms of other basic gates.                              |
  | [`duration`](#qiskit.circuit.library.MCXGate.duration "qiskit.circuit.library.MCXGate.duration")                               | Get the duration.                                                             |
  | [`label`](#qiskit.circuit.library.MCXGate.label "qiskit.circuit.library.MCXGate.label")                                        | Return gate label                                                             |
  | [`num_ancilla_qubits`](#qiskit.circuit.library.MCXGate.num_ancilla_qubits "qiskit.circuit.library.MCXGate.num_ancilla_qubits") | The number of ancilla qubits.                                                 |
  | [`num_ctrl_qubits`](#qiskit.circuit.library.MCXGate.num_ctrl_qubits "qiskit.circuit.library.MCXGate.num_ctrl_qubits")          | Get number of control qubits.                                                 |
  | [`params`](#qiskit.circuit.library.MCXGate.params "qiskit.circuit.library.MCXGate.params")                                     | Get parameters from base\_gate.                                               |
  | [`unit`](#qiskit.circuit.library.MCXGate.unit "qiskit.circuit.library.MCXGate.unit")                                           | Get the time unit of duration.                                                |

  ### add\_decomposition

  <Function id="qiskit.circuit.library.MCXGate.add_decomposition" name="add_decomposition" signature="add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  ### assemble

  <Function id="qiskit.circuit.library.MCXGate.assemble" name="assemble" signature="assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    `Instruction`
  </Function>

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.MCXGate.broadcast_arguments" name="broadcast_arguments" signature="broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  ### c\_if

  <Function id="qiskit.circuit.library.MCXGate.c_if" name="c_if" signature="c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  ### control

  <Function id="qiskit.circuit.library.MCXGate.control" name="control" signature="control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return a multi-controlled-X gate with more control lines.

    **Parameters**

    *   **num\_ctrl\_qubits** (*int*) – number of control qubits.
    *   **label** (*str or None*) – An optional label for the gate \[Default: None]
    *   **ctrl\_state** (*int or str or None*) – control state expressed as integer, string (e.g. ‘110’), or None. If None, use all 1s.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  ### copy

  <Function id="qiskit.circuit.library.MCXGate.copy" name="copy" signature="copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### ctrl\_state

  <Function id="qiskit.circuit.library.MCXGate.ctrl_state" name="ctrl_state" signature="property ctrl_state">
    Return the control state of the gate as a decimal integer.

    **Return type**

    `int`
  </Function>

  ### decompositions

  <Function id="qiskit.circuit.library.MCXGate.decompositions" name="decompositions" signature="property decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Function>

  ### definition

  <Function id="qiskit.circuit.library.MCXGate.definition" name="definition" signature="property definition">
    Return definition in terms of other basic gates. If the gate has open controls, as determined from self.ctrl\_state, the returned definition is conjugated with X without changing the internal \_definition.

    **Return type**

    `List`
  </Function>

  ### duration

  <Function id="qiskit.circuit.library.MCXGate.duration" name="duration" signature="property duration">
    Get the duration.
  </Function>

  ### get\_num\_ancilla\_qubits

  <Function id="qiskit.circuit.library.MCXGate.get_num_ancilla_qubits" name="get_num_ancilla_qubits" signature="static get_num_ancilla_qubits(num_ctrl_qubits, mode='noancilla')">
    Get the number of required ancilla qubits without instantiating the class.

    This staticmethod might be necessary to check the number of ancillas before creating the gate, or to use the number of ancillas in the initialization.
  </Function>

  ### inverse

  <Function id="qiskit.circuit.library.MCXGate.inverse" name="inverse" signature="inverse()">
    Invert this gate. The MCX is its own inverse.
  </Function>

  ### is\_parameterized

  <Function id="qiskit.circuit.library.MCXGate.is_parameterized" name="is_parameterized" signature="is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  ### label

  <Function id="qiskit.circuit.library.MCXGate.label" name="label" signature="property label">
    Return gate label

    **Return type**

    `str`
  </Function>

  ### mirror

  <Function id="qiskit.circuit.library.MCXGate.mirror" name="mirror" signature="mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### num\_ancilla\_qubits

  <Function id="qiskit.circuit.library.MCXGate.num_ancilla_qubits" name="num_ancilla_qubits" signature="property num_ancilla_qubits">
    The number of ancilla qubits.
  </Function>

  ### num\_ctrl\_qubits

  <Function id="qiskit.circuit.library.MCXGate.num_ctrl_qubits" name="num_ctrl_qubits" signature="property num_ctrl_qubits">
    Get number of control qubits.

    **Returns**

    The number of control qubits for the gate.

    **Return type**

    int
  </Function>

  ### params

  <Function id="qiskit.circuit.library.MCXGate.params" name="params" signature="property params">
    Get parameters from base\_gate.

    **Returns**

    List of gate parameters.

    **Return type**

    list

    **Raises**

    **CircuitError** – Controlled gate does not define a base gate
  </Function>

  ### power

  <Function id="qiskit.circuit.library.MCXGate.power" name="power" signature="power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  ### qasm

  <Function id="qiskit.circuit.library.MCXGate.qasm" name="qasm" signature="qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  ### repeat

  <Function id="qiskit.circuit.library.MCXGate.repeat" name="repeat" signature="repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  ### reverse\_ops

  <Function id="qiskit.circuit.library.MCXGate.reverse_ops" name="reverse_ops" signature="reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### to\_matrix

  <Function id="qiskit.circuit.library.MCXGate.to_matrix" name="to_matrix" signature="to_matrix()">
    Return a Numpy.array for the gate unitary matrix.

    **Raises**

    **CircuitError** – If a Gate subclass does not implement this method an exception will be raised when this base class method is called.

    **Return type**

    `ndarray`
  </Function>

  ### unit

  <Function id="qiskit.circuit.library.MCXGate.unit" name="unit" signature="property unit">
    Get the time unit of duration.
  </Function>

  ### validate\_parameter

  <Function id="qiskit.circuit.library.MCXGate.validate_parameter" name="validate_parameter" signature="validate_parameter(parameter)">
    Gate parameters should be int, float, or ParameterExpression
  </Function>
</Class>

